--- a/coolsite/students/templates/student/about.html
+++ b/coolsite/students/templates/student/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>{{title}}</title>
+    <title>Title</title>
 </head>
 <body>
-
+<h1>О приложении</h1>
 </body>
 </html>
